name:                nix-test
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable nix-test
  main-is:             Main.hs
  build-depends:      base >=4.9
                    , containers
                    , polysemy
                    , lens
                    , random
                    , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2 -flate-specialise -fspecialise-aggressively
  default-extensions:
    BlockArguments
    DataKinds
    FlexibleContexts
    GADTs
    LambdaCase
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeOperators
    TypeFamilies