name:                nix-test
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable nix-test
  main-is:             Main.hs
  build-depends:      base >=4.9
                    , aeson
                    , bloodhound
                    , connection
                    , containers
                    , http-client
                    , http-client-tls
                    , mtl
                    , polysemy
                    , polysemy-plugin
                    , lens
                    , random
                    , servant-server
                    , text
                    , uuid
                    , wai
                    , wai-cors
                    , wai-logger
                    , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2 -flate-specialise -fspecialise-aggressively -fplugin=Polysemy.Plugin
  default-extensions:
    BlockArguments
    DataKinds
    DeriveFunctor
    FlexibleContexts
    GADTs
    LambdaCase
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators
    TypeFamilies